[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ftp = "3.0.1"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
thirtyfour = "0.35.0"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4"] }
