[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
thirtyfour = "0.35.0"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4"] }
entity = { path = "entity" }
migration = { path = "migration" }
argon2 = "0.5.3"
rocket-jwt = "0.5.2"
rand = "0.9.1"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
